year and category filter

--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -22,3 +22,7 @@
         </mat-card-content>
     </mat-card>
 </div>
+
+<div class="no-data" *ngIf="currentProduct.length==0">
+    No Data
+</div>
