--- a/src/app/side-nav/side-nav.component.html
+++ b/src/app/side-nav/side-nav.component.html
@@ -32,6 +32,18 @@
 
 
             </div>
+            <div>
+                <mat-label>Category</mat-label>
+                <p><mat-checkbox formControlName="shoes">Shoes</mat-checkbox></p>
+                <p><mat-checkbox formControlName="shirt">Shirt</mat-checkbox></p>
+            </div>
+            <div>
+                <mat-label>Year</mat-label>
+                <p><mat-checkbox formControlName="year2020">2020</mat-checkbox></p>
+                <p><mat-checkbox formControlName="year2021">2021</mat-checkbox></p>
+
+
+            </div>
             <div class="display-flex-space">
                 <button type="button" (click)="clearFilter()" mat-button>Clear Filter</button>
                 <button type="submit" mat-button color="primary">Filter</button>
