--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -22,6 +22,20 @@
 
 }
 
+.no-data {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
+    margin: auto;
+    text-align: center;
+    background-color: gray;
+    width: 500px;
+    height: 30px;
+
+}
 
 .card-content p i {
     cursor: pointer;
